# pydantic-common-models

./: README.md  pyproject.toml
pydantic_common_models/iddc/: principals.py
pydantic_common_models/kafka/: simple_acl.py
pydantic_common_models/keycloak/: all.py
pydantic_common_models/ksm/: csv_acl.py
pydantic_common_models/ots/: models.py
pydantic_common_models/vault/: api.py  config.py
tests/ksm/: acl.py
